--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 spring.profiles.active=${APP_PROFILE:test}
 spring.jpa.open-in-view=false
+
+# Secret Key JWT Generator
+api.security.token.issuer=springbootexpert-rest-api
+api.security.token.secret.key=YSBsUGluZGFtb25oYW5nYWJhCg==
