TimeZone and Profile Enum

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.profiles.active=${APP_PROFILE:test}
 spring.jpa.open-in-view=false
+spring.datasource.initialization-mode=always
 
 # Secret Key JWT Generator
 api.security.token.issuer=springbootexpert-rest-api
