--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,11 @@
-spring.profiles.active=${APP_PROFILE:test}
+spring.profiles.active=${APP_PROFILE:dev}
 spring.jpa.open-in-view=false
 spring.datasource.initialization-mode=always
 
 # Secret Key JWT Generator
 api.security.token.issuer=springbootexpert-rest-api
 api.security.token.secret.key=YSBsUGluZGFtb25oYW5nYWJhCg==
+
+
+
+
