--- a/pom.xml
+++ b/pom.xml
@@ -12,11 +12,38 @@
 	<groupId>spring.boot.expert</groupId>
 	<artifactId>curso-spring-boot-expert</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>${project.packaging}</packaging>
 	<name>curso-spring-boot-expert</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>21</java.version>
 	</properties>
+	
+	<!-- <distributionManagement>
+		<repository>
+			<id>your-repository-id</id>
+			<url>https://your-repository-url</url>
+		</repository>
+	</distributionManagement> -->
+	<profiles>
+        <profile>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <id>desenvolvimento</id>
+            <properties>
+                <project.packaging>jar</project.packaging>
+                <tomcat.scope>compile</tomcat.scope>
+            </properties>
+        </profile>
+        <profile>
+            <id>producao</id>
+            <properties>
+                <project.packaging>war</project.packaging>
+                <tomcat.scope>provided</tomcat.scope>
+            </properties>
+        </profile>
+    </profiles>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -75,15 +102,14 @@
 			<artifactId>springdoc-openapi-starter-webmvc-api</artifactId>
 			<version>2.5.0</version>
 		 </dependency>
+		 <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-tomcat</artifactId>
+            <scope>${tomcat.scope}</scope>
+        </dependency>
 	</dependencies>
-
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-		</plugins>
-	</build>
-
 </project>
+
+<!-- mvn clean package
+	/mvnw clean package
+mvn clean package -P producao -->
